<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_area_calculator"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_sisi"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/inputSide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_masukkan_panjang_sisi"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_alas"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/inputBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_masukkan_luas_area"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_tinggi"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/inputTall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_tinggi"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_jari_jari"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/inputFinger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_masukkan_jari_jari"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/btn_hitung" />

        <TextView
            android:id="@+id/txtRectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_persegi" />

        <TextView
            android:id="@+id/txtTriangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_segitiga" />

        <TextView
            android:id="@+id/txtCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_lingkaran" />

    </LinearLayout>
</ScrollView>
